--- a/html/index.html
+++ b/html/index.html
@@ -8,15 +8,19 @@
     <title>HTML/CSS Lab1</title>
   </head>
   <body>
+    <!--change nav to header-->
     <nav>
       <div>chirpus inc.</div>
+      <!--next ul in nav-->
       <ul class="nav-link">
         <li><a href="#">Work</a></li>
         <li><a href="#">About Us</a></li>
         <li><a href="#">Contact</a></li>
       </ul>
+      <!--last link could just be in the list-->
       <a class="button" href="#">Hire Us</a>
     </nav>
+    <!--use tag for main-->
     <div class="main-content">
       <h1>chirpus inc.</h1>
       <p>
