lab one part 2 changes

--- a/html/index.html
+++ b/html/index.html
@@ -10,28 +10,34 @@
   <body>
     <!--change nav to header-->
     <nav>
-      <div>chirpus inc.</div>
       <!--next ul in nav-->
       <ul class="nav-link">
+        <div class="logo">chirpus inc.</div>
         <li><a href="#">Work</a></li>
         <li><a href="#">About Us</a></li>
         <li><a href="#">Contact</a></li>
+        <li><a class="button" href="#">Hire Us</a></li>
       </ul>
-      <!--last link could just be in the list-->
-      <a class="button" href="#">Hire Us</a>
     </nav>
     <!--use tag for main-->
-    <div class="main-content">
-      <h1>chirpus inc.</h1>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque et enim
-        eu leo tempus tincidunt at dignissim neque. Quisque cursus mi quis lacus
-        accumsan porta. Fusce tincidunt ut neque eu hendrerit. Pellentesque sit
-        amet elementum felis, ut laoreet enim. Phasellus vel erat id lacus
-        ornare consequat in in orci. Vivamus cursus odio vel nibh convallis, nec
-        sollicitudin tellus mollis.
-      </p>
-      <a class="button" href="#">Scroll Down</a>
-    </div>
+    <main>
+      <div class="main-content">
+        <h1>chirpus inc.</h1>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque et
+          enim eu leo tempus tincidunt at dignissim neque. Quisque cursus mi
+          quis lacus accumsan porta. Fusce tincidunt ut neque eu hendrerit.
+          Pellentesque sit amet elementum felis, ut laoreet enim. Phasellus vel
+          erat id lacus ornare consequat in in orci. Vivamus cursus odio vel
+          nibh convallis, nec sollicitudin tellus mollis.
+        </p>
+      </div>
+      <div class="circle-container">
+        <div class="large-circle"></div>
+        <div class="medium-circle"></div>
+        <div class="small-circle"></div>
+      </div>
+    </main>
+    <a class="button" id="scroll-down" href="#">Scroll Down</a>
   </body>
 </html>
